# traderman

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
docs/: index.rst
examples/: basic.py  basic_config.toml  basic_trading.py
examples/account_reporting/: trading_performance.py
examples/historical_analysis/: trading_performance.py
files/datasets/: AVAXUSDC-1h-2024-05.csv
local_venv/: pyvenv.cfg
src/: __init__.py
src/traderman/: dataloader.py  main.py
src/traderman/connectors/: binance.py  clients.py  config.py  conn_example.py
src/traderman/forecasters/: __init__.py  autoencoders.py  benchmarks.py  forecast.py
src/traderman/metrics/: execution.py
src/traderman/operators/: accountant.py  trader.py
src/traderman/tools/: data.py  generic.py
tests/: test_binance_account.py  test_binance_api_spot.py  test_binance_connection.py  test_binance_spot.py  test_simple.py
tests/binance_api/: test_binance_account.py  test_binance_marketdata.py  test_binance_trading.py
tests/datatypes/: test_marketdata_o.py  test_marketdata_ob.py  test_marketdata_t.py
tests/types/: test_marketdata_ob.py
traderman/: core.py
traderman/connectors/: binance.py  clients.py
traderman/core/: dataTypes.py  marketdataTypes.py
traderman/generators/: dataReport.py
traderman/metrics/: market.py
traderman/models/: benchmarks.py  forecast.py
traderman/tools/: generic.py
